# ECE411-Lightning-Detector

./: DesignReviewNotes  Meeting Notes  README.md
docs/: DesignReviewNotes  ThunderbuddiesBOM.xlsx
kicad/: #auto_saved_files#  fp-lib-table  lightning-detector.kicad_pcb  lightning-detector.kicad_pro  lightning-detector.kicad_sch  lightning-detector.step  sym-lib-table
kicad/3rd Party Lib/TFT/: tft_320x240.kicad_sym
kicad/lib/: LMH2121.kicad_sym  SOT563-ORI.kicad_mod  TFT-320x240.kicad_mod
rust-testing-firmware/: Cargo.toml
rust-testing-firmware/src/: main.rs
software/src/: CMakeLists.txt  ThunderBuddies.c  ThunderBuddy.c
