[package]
name = "rust-411-test"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.3"
defmt = "0.3.8"
defmt-rtt = "0.4.1"

embassy-executor = { version = "0.6.0", features = ["arch-cortex-m", "defmt", "executor-interrupt", "executor-thread", "integrated-timers"] }
embassy-rp = { version = "0.2.0", features = ["critical-section-impl", "defmt", "intrinsics", "rom-v2-intrinsics", "time-driver", "unstable-pac", "rom-func-cache"] }
embassy-time = { version = "0.3.2", features = ["defmt", "defmt-timestamp-uptime"] }
embedded-alloc = "0.6.0"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }

panic-probe = { version = "0.3.2", features = ["defmt", "print-defmt"] }
panic-reset = "0.1.1"
port-expander = { version = "0.6.3", features = ["critical-section"] }
portable-atomic = { version = "1.8.0", features = ["critical-section"] }

[profile.release]
debug = 2
lto = true
opt-level = 'z'

[profile.dev]
debug = 2
lto = true
opt-level = "s"
